--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <img src="assets/img/beauty/begif2.gif">
           <img src="assets/img/beauty/be1.jpg">
           <img src="assets/img/beauty/be2.jpg">
-          <img src="assets/img/beauty/be3.jpg">
+          <img src="assets/img/beauty/b13.jpg">
           <img src="assets/img/beauty/be7.jpg">
           <img src="assets/img/beauty/be8.jpg">
           <img src="assets/img/beauty/be9.jpg">
@@ -361,7 +361,7 @@
         <div class="mobile-column">
           <img src="assets/img/beauty/be4.jpg">
           <img src="assets/img/beauty/be5.jpg">
-          <img src="assets/img/beauty/be6.jpg">
+          <img src="assets/img/beauty/b08.jpg">
           <img src="assets/img/beauty/be10.jpg">
           <img src="assets/img/beauty/be11.jpg">
           <img src="assets/img/beauty/be12.jpg">
