--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
   <div class="intropage">
     <div class="imgcolumn1">
-      <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
-      <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
-      <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
+      <img class="image1" src="assets/img/intro/intro9.jpg" alt="">
+      <img class="image2" src="assets/img/intro/intro10.jpg" alt="">
+      <img class="image3" src="assets/img/intro/intro11.jpg" alt="">
     </div>
     <div class="imgcolumn2">
-      <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
-      <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
-      <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
-      <img class="image7" src="assets/img/intro/intro8.jpg" alt="">
+      <img class="image4" src="assets/img/intro/intro12.jpg" alt="">
+      <img class="image5" src="assets/img/intro/intro13.jpg" alt="">
+      <img class="image6" src="assets/img/intro/intro14.jpg" alt="">
+      <img class="image7" src="assets/img/intro/intro15.jpg" alt="">
     </div>
     <!-- intro logo section -->
     <div class="logopage">
